--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -142,16 +142,16 @@
 		\item [Örtliche Kohärenz:] Außer an Randbereichen von Objekten, bewegen sich Nachbarschaften meist in die gleiche Richtung.
 		\item [Zeitliche Kohärenz:] Bewegungen verlaufen normalerweise kontinuierlich, sodass sich ein Bildblock zwischen zwei Bildern wahrscheinlich in dieselbe Richtung weiterbewegt oder die Richtung nur gering ändert.
 	\end{description}
-	Eine genaue Beschreibung dieser Faktoren erfolgt in \ref{ch:Datenterm}, \ref{ch:oertlich} und \ref{ch:zeitlich}.\\
+	Eine genaue Beschreibung dieser Faktoren erfolgt in \ref{sec:Datenterm}, \ref{sec:oertlich} und \ref{sec:zeitlich}.\\
 	
 	\subsection{Projektziel}
 	Die Zielsetzung für das Projekt "`Bewegungsanalyse einer Videosequenz"' war eine Über\-tra\-gung des Ansatzes von Röntgenbildern auf normale Videosequenzen. Infolge dessen war eine Vernachlässigung der speziellen Anforderung des Bildrauschens möglich, da Röntgenbilder -- insbesondere als Teil einer Fluoroskopie -- zum Schutz des Patienten und des medizinischen Personals nur sehr geringe Röntgendosen enthalten dürfen und deshalb ein extrem schlechtes Signal-zu-Rauschverhältnis aufweisen. Diese Problematik besteht bei normalen Videosequenzen nicht, weshalb für die Untersuchung von vergleichsweise geringem und etwa gleich verteiltem Rauschen ausgegangen werden konnte.
 	
-\section{Verfahren}\todo[inline]{Laura}
-	In \cite{aach1998bayesian} wird das Verfahren, was dieser Ausarbeitung zu Grunde liegt beschrieben. Der dort 				aufgeführte Algorithmus wurde speziell für Röntgenaufnahmen entwickelt, um Arzt und 					Patienten im Rahmen von Behandlungen, welche Röntgenstrahlung verwenden vor gesundheitlichen 			Konsequenzen zu schützen. Es handelt sich bei dem Ansatz um ein Block-Matching Verfahren, 			welche 	dem Satz von Bayes folgen.
-	\\Im vorliegenden Fall soll das Verfahren allerdings auf gewöhnlichen Bildsequenzen angewandt 		werden. Im Folgenden wird das zu grundeliegende Verfahren erläutert und auf eventuelle 				Änderungen im Algorithmus eingegangen. 
+\section{Verfahren}
+	In \cite{aach1998bayesian} wird das Verfahren, was dieser Ausarbeitung zu Grunde liegt beschrieben. Der dort aufgeführte Algorithmus wurde speziell für Röntgenaufnahmen entwickelt und stellt ein Block-Matching-Verfahren dar, welches dem Satz von Bayes folgt.\\
+	Im Folgenden wird das Verfahren erläutert und auf die Änderungen im Algorithmus eingegangen, welche erfolgt sind, um das Verfahren für normale Bildsequenzen anzupassen.
 	
-\subsection{Bewegungsschätzung}\todo[inline]{Laura}
+\subsection{Bewegungsschätzung}
 Um zu verstehen, wie die Bewegungsschätzung im einzelnen funktioniert, muss man sich zunächst 
 klar machen, wie das geschätzte Bewegungsvektorfeld überhaupt definiert ist.\\
 
@@ -170,16 +170,66 @@ Das geschätzte Bewegungsvektorfeld $\hat{V}_{n}$ ergibt sich nach den Ausführung
 	\label{eq:bayes}
 \end{equation}\\
 	
-Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrscheinlichkeiten auseinander zu setzen. Der erste Faktor der Formel \ref{eq:bayes} ist im Originalansatz zur Modellierung des Rauschens gedacht. Es ist davon auszugehen, dass Röntgenbilder weit aus mehr verrauscht sind, als reale Bildsequenzen auf die das vorliegende Verfahren angewandt werden soll. Deshalb liegt es nahe, dass Rauschen weitgehend zu vernachlässigen und durch einen reinen Datenterm zu ersetzen. Mehr Details dazu kann man in Kapitel \ref{ch:Datenterm} nachlesen. Bei den beiden anderen Faktoren handelt es sich zum einen um die örtliche und zum anderen um die zeitliche Kohärenz. Beide werden in den Kapiteln \ref{ch:oertlich} bzw. \ref{ch:zeitlich} näher beschrieben.
+Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrscheinlichkeiten auseinander zu setzen. Der erste Faktor der Formel \ref{eq:bayes} ist im Originalansatz zur Modellierung des Rauschens gedacht. Es ist davon auszugehen, dass Röntgenbilder weit aus mehr verrauscht sind, als reale Bildsequenzen auf die das vorliegende Verfahren angewandt werden soll. Deshalb liegt es nahe, dass Rauschen weitgehend zu vernachlässigen und durch einen reinen Datenterm zu ersetzen. Mehr Details dazu kann man in Kapitel \ref{sec:Datenterm} nachlesen. Bei den beiden anderen Faktoren handelt es sich zum einen um die örtliche und zum anderen um die zeitliche Kohärenz. Beide werden in den Kapiteln \ref{sec:oertlich} bzw. \ref{sec:zeitlich} näher beschrieben.
 		
-		\subsection{Programmablauf} \label{ch:programmAblauf}
+		\subsection{Kostenfunktion}\label{sec:costFunc}\todo[inline]{Alle}
+			\subsubsection{Datenterm}\label{sec:Datenterm}
+			Der Datenterm als Teil der zu minimierenden Kostenfunktion hat die Aufgabe, die Veränderung der Grauwerte beim Vergleich zweier Bilder zu quantifizieren. Da angenommen wird, dass diese gemessenen Veränderungen nur durch Bewegung und Rauschen verursacht wird, lässt sich das Rauschen selbst modellieren, indem vor dem Vergleich der Bilder die tatsächliche Bewegung herausgerechnet, also eins der Bilder entsprechend des zuvor ermittelten Bewegungsvektors verschoben wird.
+			
+			Der zu minimierende Ausdruck für die Modellierung des Rauschens für ganze Bilder lautet:
+			\begin{equation}
+				p(Y_n,Y_{n-1}|V)=c'\cdot e^{-\displaystyle\sum\limits_{\vec{k}}{\frac{\left[d\left(\vec{k},\vec{v}\left(\vec{k}\right)\right)\right]^2}{4\cdot\sigma^2\left(\vec{k}\right)}}}
+				\label{eq:noise}
+			\end{equation}
+			
+			Da ebenfalls angenommen wird, dass die Bewegung über das ganze Bild nicht konstant ist, wird das Bild in Blöcke unterteilt. Des weiteren führt die Übertragung des eigentlichen Problems von Röntgenbildern auf normale Bildsequenzen zu der Erkenntnis, dass die Poisson-Verteilung des Rauschens bei Röntgenbildern aufgrund der niedrigen Anzahl von Röntgenquanten, bei normalen Bildern in eine Normalverteilung übergeht. Aus diesem Grund kann der Term unter dem Bruchstrich im Exponenten von Gleichung~\ref{eq:noise} vernachlässigt werden. Da der verbleibende Ausdruck von Gleichung~\ref{eq:noise} minimal wird, wenn der Exponent der Exponentialfunktion minimal wird, genügt für das Minimierungsproblem
+			\begin{equation}
+				d\left(\vec{k},\vec{v}\left(\vec{k}\right)\right)=y_n\left(\vec{k}\right)-y_{n-1}\left(\vec{k}+\vec{v}\left(\vec{k}\right)\right)
+			\end{equation}
+			wobei $y_n\left(\vec{k}\right)$ der aktuelle Block und $y_{n-1}\left(\vec{k}+\vec{v}\left(\vec{k}\right)\right)$ der zu vergleichende Block des vorherigen Bildes, verschoben um $\vec{v}\left(\vec{k}\right)$ ist.\\
+			
+			Um etwaige Probleme am Rand des Bildes zu verhindern, wurde eine Randbehandlung implementiert, welche verhindert, dass Blockadressen im vorherigen $y_{n-1}$-Bild außerhalb der Bildgrenzen liegen.
+			\subsubsection{Örtliche Kohärenz}\label{sec:oertlich}
+
+Die örtliche Kohärenz trägt als gewichteter Regularisierungsterm zur Kostenfunktion bei.
+Bei der Bestimmung der örtlichen Kohärenz wird von der Annahme ausgegangen, dass benachbarte Regionen in Bildfolgen ähnliche Bewegungsrichtungen aufweisen.
+Hierzu werden neben dem neuen möglichen Bewegungsvektor der untersuchten Bildposition die Bewegungsvektoren der jeweiligen 8ter-Nachbarschaft betrachtet.
+Über die Differenzen des Bewegungsvektor und der benachbarten Bewegungsvektoren ergibt sich eine a-priori-Wahrscheinlichkeitsdichte.
+Ziel ist daher die Minimierung des Exponenten der Wahrscheinlichkeitsdichte:
+
+\begin{equation}
+E_L\left(\vec{k},V\right) = \sum_{\vec{l} \epsilon N(\vec{k})} g_{\vec{l}} \left|\left| \vec{v}\left(\vec{k}\right) - \vec{v}\left(\vec{l}\,\right) \right|\right|_2^{\nu}
+\end{equation}
+
+Der Faktor $g_{\vec{l}}$ gewichtet die normierte Differenz abhängig von der Position des betrachteten benachbarten Bewegungsvektor.
+Über den Parameter $\nu$ kann die verallgemeinerte Normalverteilung angepasst werden. 
+Die Normalverteilung ($\nu=2$) glättet das Bewegungsvektorfeld zu stark.
+Für $\nu=1.3$ ergibt sich eine praktikable Parametrisierung.\textsuperscript{\cite{aach1998bayesian}} \\
+
+Die Implementierung berechnet demnach die Summe bestehend aus den gewichteten normierten und mit dem Parameter $\nu$ potenzierten Differenzen.
+Hierzu wird neben dem Index der aktuell untersuchten Bildposition/-region der Listenindex des neuen möglichen Bewegungsvektors benötigt.
+Mit Hilfe des Index der untersuchten Bildposition können dann die benötigten Positionen der Nachbarregionen bestimmt werden. 
+Zu beachten ist hierbei, dass für Randbereiche weniger Nachbarregionen untersucht werden bzw. nicht vorhanden sind.
+Nachdem die Differenzen gemäß dem euklidischen Abstand normiert sind, werden diese mit dem Parameter $\nu$ potenziert.
+Das Ergebnis wird für horizontale und vertikale Nachbarregionen mit dem Faktor $g_l=1$ und für diagonale Nachbarregionen mit dem Faktor $g_l=0.5$ gewichtet. Anschließend werden die gewichteten Ergebnisse aufsummiert und zurück gegeben.			
+			
+			\subsubsection{Zeitliche Kohärenz}\label{sec:zeitlich}
+			Da Bewegungen normalerweise gleichmäßig ablaufen -- wenn sie nicht gerade beginnen oder enden -- basiert die zeitliche Kohärenz darauf, dass die Bewegung (z.\,B. im aktuellen Block) der Bewegung im gleichen Block des vorherigen Bildes ähnlich ist. Für die Berechnung der Kosten folgt als Minimierungsterm aus
+			\begin{equation}
+				p\left(\hat{V}_{n-1}|V\right)=c\cdot e^{\displaystyle-\lambda_T\sum\limits_{\vec{k}}\left|\left|\hat{\vec{V}}_{n-1}\left(\vec{k}\right)-\vec{v}\left(\vec{k}\right)\right|\right|^\nu_2}
+			\label{eq:}
+			\end{equation}
+			
+			dass wieder nur der Exponent der Exponentialfunktion ausgewertet werden muss, da der gesamte Ausdruck minimal wird, wenn der Exponent minimal wird.
+			
+			\subsection{Programmablauf} \label{sec:programmAblauf}
 		Der Programmablauf des ImageJ-Plug-Ins in Form der \texttt{run()}-Methode, die aufgrund des implementierten \texttt{PlugInFilter}-Interfaces überschrieben werden muss, ist in Abbildung~\ref{fig:programmAblauf} dargestellt.\\
 		Grob betrachtet, werden in der \texttt{run()}-Methode drei \texttt{for}-Schleifen geschachtelt ausgeführt. Die innerste Schleife läuft über jeden Block des Bildes und bestimmt für diesen den Bewegungsvektor mit den geringsten Kosten aus den 14 berechneten Alternativen. Die Blockgröße ist variabel und kann z.\,B. $8\times8$ betragen.\\
 		Die nächst äußere Schleife ist für die Iterationen zuständig. In den Iterationen wird innerhalb eines Bildes des Input-Stacks das Bewegungsvektorfeld mehrfach berechnet und jeweils das zuletzt berechnete Ergebnis als Grundlage für die nächste Berechnung verwendet. Dies ist erforderlich, um die Abweichung der Bewegungsvektoren pro Frame so gering wie möglich zu halten. Gleichzeitig hängt die Wahl der Anzahl der Iterationen natürlich davon ab, welche Performanz die Berechnung erreichen soll, also wie schnell ein Ergebnis benötigt wird.\\
 		Die äußere Schleife läuft über den Stack und sorgt somit dafür, dass die Berechnungen pro Block und Iteration jeweils für jedes Bild des Input-Stacks erfolgen.\\
 		Sobald ein Bild fertig bearbeitet ist, die äußere Schleife also einen Durchlauf absolviert hat, wird der Fortschrittsbalken im ImageJ-Fenster aktualisiert, damit der Benutzer eine Rückmeldung bekommt, wie weit die Berechnung fortgeschritten ist.\\
 		Zuletzt wird in der \texttt{run()}-Methode noch das Ausgabefenster, in welchem der Input-Stack inklusive der überlagerten Bewegungsvektorfelder dargestellt wird, generiert und dessen Methode zur Anzeige aufgerufen.
-		%\begin{comment}
+		\begin{comment}
 			\begin{figure}[h!]
 			\centering
 					\begin{psmatrix}[rowsep=0.3,colsep=0.4]
@@ -229,66 +279,16 @@ Da es sich um einen bayesschen Ansatz handelt, gilt es sich mit bedingten Wahrsc
 			\caption{Programmablauf}
 			\label{fig:programmAblauf}
 		\end{figure}
-%\end{comment}		
-		
-		\subsection{Kostenfunktion}\label{sec:costFunc}\todo[inline]{Alle}
-			\subsubsection{Datenterm}\todo[inline]{Lukas}\label{ch:Datenterm}
-			Der Datenterm als Teil der zu minimierenden Kostenfunktion hat die Aufgabe, die Veränderung der Grauwerte beim Vergleich zweier Bilder zu quantifizieren. Da angenommen wird, dass diese gemessenen Veränderungen nur durch Bewegung und Rauschen verursacht wird, lässt sich das Rauschen selbst modellieren, indem vor dem Vergleich der Bilder die tatsächliche Bewegung herausgerechnet, also eins der Bilder entsprechend des zuvor ermittelten Bewegungsvektors verschoben wird.
+\end{comment}		
 			
-			Der zu minimierende Ausdruck für die Modellierung des Rauschens für ganze Bilder lautet:
-			\begin{equation}
-				p(Y_n,Y_{n-1}|V)=c'\cdot e^{-\displaystyle\sum\limits_{\vec{k}}{\frac{\left[d\left(\vec{k},\vec{v}\left(\vec{k}\right)\right)\right]^2}{4\cdot\sigma^2\left(\vec{k}\right)}}}
-				\label{eq:noise}
-			\end{equation}
-			
-			Da ebenfalls angenommen wird, dass die Bewegung über das ganze Bild nicht konstant ist, wird das Bild in Blöcke unterteilt. Des weiteren führt die Übertragung des eigentlichen Problems von Röntgenbildern auf normale Bildsequenzen zu der Erkenntnis, dass die Poisson-Verteilung des Rauschens bei Röntgenbildern aufgrund der niedrigen Anzahl von Röntgenquanten, bei normalen Bildern in eine Normalverteilung übergeht. Aus diesem Grund kann der Term unter dem Bruchstrich im Exponenten von Gleichung~\ref{eq:noise} vernachlässigt werden. Da der verbleibende Ausdruck von Gleichung~\ref{eq:noise} minimal wird, wenn der Exponent der Exponentialfunktion minimal wird, genügt für das Minimierungsproblem
-			\begin{equation}
-				d\left(\vec{k},\vec{v}\left(\vec{k}\right)\right)=y_n\left(\vec{k}\right)-y_{n-1}\left(\vec{k}+\vec{v}\left(\vec{k}\right)\right)
-			\end{equation}
-			wobei $y_n\left(\vec{k}\right)$ der aktuelle Block und $y_{n-1}\left(\vec{k}+\vec{v}\left(\vec{k}\right)\right)$ der zu vergleichende Block des vorherigen Bildes, verschoben um $\vec{v}\left(\vec{k}\right)$ ist.\\
-			
-			Um etwaige Probleme am Rand des Bildes zu verhindern, wurde eine Randbehandlung implementiert, welche verhindert, dass Blockadressen im vorherigen $y_{n-1}$-Bild außerhalb der Bildgrenzen liegen.
-			\subsubsection{Örtliche Kohärenz}\todo[inline]{Timo}\label{ch:oertlich}
-
-Die örtliche Kohärenz trägt als gewichteter Regularisierungsterm zur Kostenfunktion bei.
-Bei der Bestimmung der örtlichen Kohärenz wird von der Annahme ausgegangen, dass benachbarte Regionen in Bildfolgen ähnliche Bewegungsrichtungen aufweisen.
-Hierzu werden neben dem neuen möglichen Bewegungsvektor der untersuchten Bildposition die Bewegungsvektoren der jeweiligen 8ter-Nachbarschaft betrachtet.
-Über die Differenzen des Bewegungsvektor und der benachbarten Bewegungsvektoren ergibt sich eine a-priori-Wahrscheinlichkeitsdichte.
-Ziel ist daher die Minimierung des Exponenten der Wahrscheinlichkeitsdichte:
-
-\begin{equation}
-E_L\left(\vec{k},V\right) = \sum_{\vec{l} \epsilon N(\vec{k})} g_{\vec{l}} \left|\left| \vec{v}\left(\vec{k}\right) - \vec{v}\left(\vec{l}\,\right) \right|\right|_2^{\nu}
-\end{equation}
-
-Der Faktor $g_{\vec{l}}$ gewichtet die normierte Differenz abhängig von der Position des betrachteten benachbarten Bewegungsvektor.
-Über den Parameter $\nu$ kann die verallgemeinerte Normalverteilung angepasst werden. 
-Die Normalverteilung ($\nu=2$) glättet das Bewegungsvektorfeld zu stark.
-Für $\nu=1.3$ ergibt sich eine praktikable Parametrisierung.\textsuperscript{\cite{aach1998bayesian}} \\
-
-Die Implementierung berechnet demnach die Summe bestehend aus den gewichteten normierten und mit dem Parameter $\nu$ potenzierten Differenzen.
-Hierzu wird neben dem Index der aktuell untersuchten Bildposition/-region der Listenindex des neuen möglichen Bewegungsvektors benötigt.
-Mit Hilfe des Index der untersuchten Bildposition können dann die benötigten Positionen der Nachbarregionen bestimmt werden. 
-Zu beachten ist hierbei, dass für Randbereiche weniger Nachbarregionen untersucht werden bzw. nicht vorhanden sind.
-Nachdem die Differenzen gemäß dem euklidischen Abstand normiert sind, werden diese mit dem Parameter $\nu$ potenziert.
-Das Ergebnis wird für horizontale und vertikale Nachbarregionen mit dem Faktor $g_l=1$ und für diagonale Nachbarregionen mit dem Faktor $g_l=0.5$ gewichtet. Anschließend werden die gewichteten Ergebnisse aufsummiert und zurück gegeben.			
-			
-			\subsubsection{Zeitliche Kohärenz}\todo[inline]{Lukas}\label{ch:zeitlich}
-			Da Bewegungen normalerweise gleichmäßig ablaufen -- wenn sie nicht gerade beginnen oder enden -- basiert die zeitliche Kohärenz darauf, dass die Bewegung (z.\,B. im aktuellen Block) der Bewegung im gleichen Block des vorherigen Bildes ähnlich ist. Für die Berechnung der Kosten folgt als Minimierungsterm aus
-			\begin{equation}
-				p\left(\hat{V}_{n-1}|V\right)=c\cdot e^{\displaystyle-\lambda_T\sum\limits_{\vec{k}}\left|\left|\hat{\vec{V}}_{n-1}\left(\vec{k}\right)-\vec{v}\left(\vec{k}\right)\right|\right|^\nu_2}
-			\label{eq:}
-			\end{equation}
-			
-			dass wieder nur der Exponent der Exponentialfunktion ausgewertet werden muss, da der gesamte Ausdruck minimal wird, wenn der Exponent minimal wird.
-			
-\subsection{Visualisierung}\todo[inline]{Laura}
+\subsection{Visualisierung}
 	Um die Bewegungsvektorfelder darzustellen, wird sich mit Symbolen beholfen. Diese werden 				blockweise  über die Videosequenz gelegt. Aus Darstellungsgründen wird das Video dazu um Faktor 	4 in beide Bildrichtungen hoch skaliert. Da die einzelnen Bewegungsvektoren immer zwischen zwei 		Frames berechnet werden, wird genau ein Bewegungsvektorfeld weniger erzeugt, als das 					Eingangsmaterial Frames hat. \\
 	Bei den bereits erwähnten Symbolen handelt es sich um Kreise und Pfeile. Ein Kreis wird immer 		dann genutzt, wenn für den entsprechenden Block keine oder nur eine kleine Bewegung durch das 		Verfahren ermittelt wurde. Die Pfeile zeigen immer in Richtung der ermittelten Verschiebung. 			Beide Symbole haben ihren Startpunkt im Mittelpunkt des jeweiligen Blocks.\\
 	Die Randbereiche der einzelnen Bewegungsvektorfelder werden bei der Visualisierung ausgespart, 
 	da hier durch den Algorithmus begründete Fehlberechnungen auftreten.
 	\section{Auswertung}\todo[inline]{Laura \& Timo}
 
-\subsection{Testmaterial}\todo[inline]{Laura}\label{ch:testmaterialien}
+\subsection{Testmaterial}\label{sec:testmaterialien}
 	Das Verfahren wird anhand von drei unterschiedlichen Bildsequenzen getestet, die im Folgenden 		Testmaterial 1-3 genannt werden und alle eine Auflösung von 256x2656 Pixeln haben. Bei 				Testmaterial 1 und Testmaterial 2 wurde ein Bild um bekannte Werte in x- und y-Richtung 				verschoben. Anzumerken ist auch, dass beide Testmaterialien identisch verschoben wurden. Bei 			Testmaterial 3 kann die Bewegung der zu sehenden Objekte lediglich geschätzt werden. Alle 			Testmaterialien wurden für diese Dokumentation aufgenommen bzw. erstellt.\vspace{0.6cm}
 
 \begin{minipage}{0.5\textwidth}
@@ -333,7 +333,7 @@ Das Ergebnis wird für horizontale und vertikale Nachbarregionen mit dem Faktor $
 \end{minipage}
 
 \subsection{Auswertung der Testmaterialien}\todo[inline]{Laura} \label{AuswertungTestmaterialien}
-Im Folgenden wird das Verfahren anhand der in Kapitel \ref{ch:testmaterialien} aufgeführten Testmaterialien ausgewertet. Dabei wurden für alle Materialien die gleichen Einstellungsparameter gewählt:
+Im Folgenden wird das Verfahren anhand der in Kapitel \ref{sec:testmaterialien} aufgeführten Testmaterialien ausgewertet. Dabei wurden für alle Materialien die gleichen Einstellungsparameter gewählt:
 \begin{itemize} 
 \item[$\bullet$] 5 Iterationen
 \item[$\bullet$] $\nu$ = 1.5
@@ -342,7 +342,7 @@ Im Folgenden wird das Verfahren anhand der in Kapitel \ref{ch:testmaterialien} a
 
 In Abbildung \ref{fig:testmaterial12} sind jeweils drei Bewegungsvektorfelder für Testmaterial 1 und Testmaterial 2 zu sehen. Es ist deutlich erkennbar, dass die Bewegungsdetektion sowohl für hochfrequente, als auch für tieffrequente Bildinhalte funktioniert hat. \\
 Die Abweichungen der berechneten von den tatsächlichen Bewegungsvektoren können bestimmt werden, da die Bewegung bekannt ist. Da sich alle Blöcke eines Frames mit der selben Geschwindigkeit in die selbe Richtung bewegen, kann die absolute Längenabweichung der einzelnen Vektoren über ein Frame aufsummiert und durch die Anzahl der Blöcke geteilt werden um ein Maß für die absolute Abweichung zu erhalten.\\
-Schaut man sich die so ermittelten Abweichungen für ein Frame an, wo in den vorherigen Frames keine Richtungsänderung  stattgefunden hat, so beträgt diese im Durchschnitt für beide Testmaterialien ungefähr ein halbes Pixel. Da es wie in Kapitel \ref{ch:Einschwingverhalten} näher beschrieben dauert, bis die Bewegungsvektoren eingeschwungen sind, kommt es in den Frames 50 und 100 in beiden Testmaterialien zu einer Abweichung von bis zu 8 Pixeln. Das sind eben die Frames, wo sich die Bewegung verändert. \\
+Schaut man sich die so ermittelten Abweichungen für ein Frame an, wo in den vorherigen Frames keine Richtungsänderung  stattgefunden hat, so beträgt diese im Durchschnitt für beide Testmaterialien ungefähr ein halbes Pixel. Da es wie in Kapitel \ref{sec:Einschwingverhalten} näher beschrieben dauert, bis die Bewegungsvektoren eingeschwungen sind, kommt es in den Frames 50 und 100 in beiden Testmaterialien zu einer Abweichung von bis zu 8 Pixeln. Das sind eben die Frames, wo sich die Bewegung verändert. \\
 
 \begin{figure}[H] 
 		\centering
@@ -353,7 +353,7 @@ Schaut man sich die so ermittelten Abweichungen für ein Frame an, wo in den vorh
 
 Da es sich bei Testmaterial 3 um eine reale Videosequenz handelt, deren Bewegungsvektoren unbekannt sind, kann die Auswertung hier nur rein visuell vorgenommen werden.\\\\
 Abbildung \ref{fig:frame43} und Abbildung \ref{fig:frame47} zeigen jeweils ein Standbild aus dem Bewegungsvektorfeld, welches sich unter dem Namen \textit{testmaterial3-bewegungsvektorfeld.tiff} auf der beiliegenden Daten-CD befindet.\\
-Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfindet weitgehend richtig detektiert wurden. Und auch die Bewegung des Autos und der Radfahrerin werden trotz der Verdeckung durch die Säule weitgehend erkannt. Auffällig ist, dass besonders die Blöcke, die hinter dem Auto liegen und deren Bildinhalt sich nicht mehr bewegt falsch berechnet sind. Das ist besonders gut in Abbildung \ref{fig:frame47} zu sehen und lässt sich auf das Einschwingverhalten zurückführen. Dieses wird in Kapitel \ref{ch:Einschwingverhalten} erklärt und ausgewertet.\\
+Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfindet weitgehend richtig detektiert wurden. Und auch die Bewegung des Autos und der Radfahrerin werden trotz der Verdeckung durch die Säule weitgehend erkannt. Auffällig ist, dass besonders die Blöcke, die hinter dem Auto liegen und deren Bildinhalt sich nicht mehr bewegt falsch berechnet sind. Das ist besonders gut in Abbildung \ref{fig:frame47} zu sehen und lässt sich auf das Einschwingverhalten zurückführen. Dieses wird in Kapitel \ref{sec:Einschwingverhalten} erklärt und ausgewertet.\\
 
 \begin{minipage}{0.5\textwidth}
 	\begin{figure}[H] 
@@ -372,10 +372,10 @@ Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfind
 
 Alle erzeugten Bewegungsvektorfelder können auf der beiliegenden Daten-CD eingesehen werden. Die Dateien heißen \textit{bvf-1.tiff}, \textit{bvf-2.tiff} und \textit{bvf-3.tiff}.
 
-\subsection{Einschwingverhalten} \label{ch:Einschwingverhalten}
+\subsection{Einschwingverhalten} \label{sec:Einschwingverhalten}
 Als Ausgangspunkt werden alle Bewegungsvektorfelder zu Beginn des Algorithmus auf den Nullvektor gesetzt. Das Verfahren muss sich also zunächst Einschwingen. Dabei wird im Folgenden zwischen dem interframe und dem intraframe Einschwingen unterschieden.	
 
-\subsubsection{Bewegungsvektorfelder}\label{sec:bvf}\todo[inline]{Timo}
+\subsubsection{Bewegungsvektorfelder}\label{sec:bvf}
 
 Im Folgenden wird das Konvergenzverhalten des Verfahrens über die Bilderfolgen  untersucht.
 Zur Auswertung wird das \textit{Testmaterial 1} und das \textit{Testmaterial 2} benutzt.
@@ -394,7 +394,7 @@ Abbildung~\ref{fig:einschwingFrame} veranschaulicht das Konvergenzverhalten der 
 Spätestens nach der siebten Bildfolge konvergiert das Verfahren.
 Neben den Einstellungen für $\nu$,$\lambda$ und $\lambda_T$ wird das Konvergenzverhalten durch den Bildinhalt des Testmaterials beeinflusst.
 
-		%\begin{comment}
+		\begin{comment}
 			\begin{figure}[H]
 				\psset{xunit=1cm,yunit=.5mm}
 					\begin{pspicture}(-0.5,-20)(12,130)
@@ -456,12 +456,12 @@ Neben den Einstellungen für $\nu$,$\lambda$ und $\lambda_T$ wird das Konvergenzv
 				\caption{Einschwingverhalten der Bewegungsvektorfelder über die ersten 10 Bilder von Testmaterial 1 und 2.}
 				\label{fig:einschwingFrame}
 			\end{figure}
-		%\end{comment}
+		\end{comment}
 		
 		\subsubsection{Innerhalb eines Bildes}\todo[inline]{Laura}
-Wie in Kapitel \ref{ch:programmAblauf} beschrieben wird die Bewegungsdetektion in jedem Frame über mehrere Iterationen hinweg ermittelt. Mit anderen Worten: $V_{n}$ wird in jeder Iteration neu gesetzt und man kann davon sprechen. Im Folgenden wird die Veränderung der Vektoren nach jeder Iteration betrachtet. Dabei werden die Parameter wie in Kapitel \ref{AuswertungTestmaterialien} gewählt.
+Wie in Kapitel \ref{sec:programmAblauf} beschrieben wird die Bewegungsdetektion in jedem Frame über mehrere Iterationen hinweg ermittelt. Mit anderen Worten: $V_{n}$ wird in jeder Iteration neu gesetzt und man kann davon sprechen. Im Folgenden wird die Veränderung der Vektoren nach jeder Iteration betrachtet. Dabei werden die Parameter wie in Kapitel \ref{AuswertungTestmaterialien} gewählt.
 
-		%\begin{comment}
+		\begin{comment}
 			\begin{figure}[H]
 				\psset{xunit=1cm,yunit=.5mm}
 					\begin{pspicture}(-0.5,-20)(12,130)
@@ -569,9 +569,9 @@ Wie in Kapitel \ref{ch:programmAblauf} beschrieben wird die Bewegungsdetektion i
 			\caption{Einschwingverhalten der Bewegungsvektorfelder in Abhängigkeit der Iterationen innerhalb eines Bildes bei fünf Iterationen.}
 			\label{fig:einschwingIter5}
 		\end{figure}
-	%\end{comment}		
+	\end{comment}		
 	
-			%\begin{comment}
+			\begin{comment}
 			\begin{figure}[H]
 				\psset{xunit=1cm,yunit=.5mm}
 					\begin{pspicture}(-0.5,-20)(12,130)
@@ -638,22 +638,22 @@ Wie in Kapitel \ref{ch:programmAblauf} beschrieben wird die Bewegungsdetektion i
 					\listplot[linecolor=green,linewidth=1pt]{
 						1	39.3824754
 						2	33.4164411
-						3	28.4391573 %2.99362E+15
+						3	29.9361794
 						4	23.4618736
 						5	17.9897871
 						6	13.7384903
-						7	7.6007315 %4.40499E+15
+						7	04.4049927
 						8	01.4629727
 						9	00.4225138
 						10	00.385155}
 					\listplot[linewidth=.025pt,plotstyle=dots]{
 						1	39.3824754
 						2	33.4164411
-						3	28.4391573 %2.99362E+15
+						3	29.9361794
 						4	23.4618736
 						5	17.9897871
 						6	13.7384903
-						7	7.6007315 %4.40499E+15
+						7	04.4049927
 						8	01.4629727
 						9	00.4225138
 						10	00.385155}					
@@ -661,9 +661,9 @@ Wie in Kapitel \ref{ch:programmAblauf} beschrieben wird die Bewegungsdetektion i
 			\caption{Einschwingverhalten der Bewegungsvektorfelder in Abhängigkeit der Iterationen innerhalb eines Bildes bei zehn Iterationen.}
 			\label{fig:einschwingIter10}
 		\end{figure}
-	%\end{comment}		
+	\end{comment}		
 
-		\subsection{Parameter der Regularisierungsterme}\todo[inline]{Timo}
+		\subsection{Parameter der Regularisierungsterme}
 		
 Der folgende Abschnitt untersucht die geeignete Parametrisierung der Gewichtungen $\lambda$ und $\lambda_T$ der zwei Regularisierungsterme.
 Wie in {\cite{aach1998bayesian}} beschrieben, ist es möglich über die zwei Faktoren die Varianz der verallgemeinerten Normalverteilung zu modifizieren.
@@ -675,7 +675,7 @@ In Tabelle \ref{fig:einschwingRegula} wird das Einschwingen der ersten 10 Bewegu
 Zur Bestimmung der Abweichung des geschätzten Bewegungsvektorfeldes wird wie in \ref{sec:bvf} verfahren. \\
 		
 		
-		%\begin{comment}
+		\begin{comment}
 			\begin{figure}[H]
 				\psset{xunit=1cm,yunit=.5mm}
 					\begin{pspicture}(-0.5,-20)(12,130)
@@ -817,7 +817,7 @@ Zur Bestimmung der Abweichung des geschätzten Bewegungsvektorfeldes wird wie in 
 			\caption{Einschwingverhalten der Bewegungsvektorfelder in Abhängigkeit der Regularisierungsparameter $\lambda$ und $\lambda_T$.}
 			\label{fig:einschwingRegula}
 		\end{figure}
-	%\end{comment}			
+	\end{comment}			
 	
 		\begin{table}[H]
 		\centering
@@ -848,7 +848,7 @@ Die Wahl von $\lambda=0.001$ und $\lambda_T=0.001$ liefert das Optimum für die b
 
 
 	\section{Zusammenfassung}\todo[inline]{Lukas}
-	\section{Arbeitsaufteilung}
+	\section{Arbeitsaufteilung}\todo[inline]{Alle}
 	\newpage
 	\bibliographystyle{plain}
 	\bibliography{ABV_Bewegungsanalyse_LaTeX}
