--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -148,8 +148,7 @@
 	Die Zielsetzung für das Projekt "`Bewegungsanalyse einer Videosequenz"' war eine Über\-tra\-gung des Ansatzes von Röntgenbildern auf normale Videosequenzen. Infolge dessen war eine Vernachlässigung der speziellen Anforderung des Bildrauschens möglich, da Röntgenbilder -- insbesondere als Teil einer Fluoroskopie -- zum Schutz des Patienten und des medizinischen Personals nur sehr geringe Röntgendosen enthalten dürfen und deshalb ein extrem schlechtes Signal-zu-Rauschverhältnis aufweisen. Diese Problematik besteht bei normalen Videosequenzen nicht, weshalb für die Untersuchung von vergleichsweise geringem und etwa gleich verteiltem Rauschen ausgegangen werden konnte.
 	
 \section{Verfahren}
-	In \cite{aach1998bayesian} wird das Verfahren, was dieser Ausarbeitung zu Grunde liegt beschrieben. Der dort aufgeführte Algorithmus wurde speziell für Röntgenaufnahmen entwickelt und stellt ein Block-Matching-Verfahren dar, welches dem Satz von Bayes folgt.\\
-	Im Folgenden wird das Verfahren erläutert und auf die Änderungen im Algorithmus eingegangen, welche erfolgt sind, um das Verfahren für normale Bildsequenzen anzupassen.
+	In \cite{aach1998bayesian} wird das Verfahren, was dieser Ausarbeitung zu Grunde liegt beschrieben. Es handelt sich dabei um ein Block-Matching-Verfahren auf Grundlage des Satzes von Bayes. Im Folgenden wird das Verfahren erläutert und auf die Änderungen im Algorithmus eingegangen, welche erfolgt sind, um das Verfahren für normale Bildsequenzen anzupassen.
 	
 \subsection{Bewegungsschätzung}
 Um zu verstehen, wie die Bewegungsschätzung im einzelnen funktioniert, muss man sich zunächst 
